# haiku

./: .gitignore  AGG_TO_BLEND2D_ARCHITECTURE_ANALYSIS.md  AGG_TO_BLEND2D_COMPLETE_IMPLEMENTATIONS.md  AGG_TO_BLEND2D_COMPREHENSIVE_MIGRATION_STRATEGY.md  AGG_TO_BLEND2D_COMPREHENSIVE_TEST_PLAN.md  AGG_TO_BLEND2D_DETAILED_IMPLEMENTATION_PLAN.md  AGG_TO_BLEND2D_GAPS_RESOLUTION_SUMMARY.md  AGG_TO_BLEND2D_MIGRATION_STRATEGY.md  AGG_TO_SKIA_MIGRATION_RESEARCH.md  APP_SERVER_BUILD_WARNINGS.md  ARCHITECTURAL_ANALYSIS_TOUCH_SUPPORT.md  ARCHITECTURE_REMOVAL_ANALYSIS.md  BEAPI_TOUCH_COMPLIANCE_VERIFICATION.md  BFS_DEBUG_IMPROVEMENTS.md  BFS_SESSION_LOG.md  BLEND2D_INTEGRATION_EXAMPLES.md  BLEND2D_MIGRATION_RESEARCH.md  CLAUDE.md  CMakeLists.txt  DESKTOP_CPP_REFACTORING_ANALYSIS.md  GCC2_REMOVAL_COMPLETE_FILE_LIST.md  HAIKU_APPLICATIONS_CATALOG.md  HAIKU_APP_SERVER_GRAPHICS_ARCHITECTURE_COMPREHENSIVE_ANALYSIS.md  HAIKU_FROM_SCRATCH_BUILD_ANALYSIS_20250820.md  HAIKU_GCC2_SUPPORT_ANALYSIS.md  HAIKU_MOBILE_UI_REDESIGN_PLAN.md  HAIKU_MOBILE_UI_REDESIGN_PLAN_CLEAN.md  HAIKU_RENDERING_PERFORMANCE_ANALYSIS.md  HAIKU_TOUCH_SUPPORT_BEAPI_COMPLIANT_PLAN.md  HAIKU_TOUCH_SYSTEM_COMPREHENSIVE_TEST_PLAN.md  HAIKU_UI_ARCHITECTURE_OVERVIEW.md  HIGH_IMPACT_TODOS.md  INTEGRATION.md  JAM_CROSS_TOOLS_BUILD_ANALYSIS.md  Jamfile  LAVD_SCHEDULER_DEBUG.md  MESON_BUILD_INTEGRATION_LOG.md  MESON_COMMANDS_REFERENCE.md  MESON_CROSS_TOOLS_BUILD_PROPOSAL.md  MODERN_CPP17_TOUCH_IMPLEMENTATION.md  (+59 more)
src/apps/: Jamfile  meson.build
src/apps/2drenderdemo/: 2DRenderDemo.cpp  2DRenderDemo.rdef  Jamfile
src/apps/InputTest/: Jamfile  KosmInputTest.cpp  KosmInputTest.rdef
src/apps/breakout/: BreakoutGame.cpp  BreakoutGame.rdef  BreakoutView.cpp  BreakoutView.h  Jamfile
src/apps/deskbar/: BarApp.cpp  BarMenuBar.cpp  BarMenuBar.h  BarMenuTitle.cpp  BarView.cpp  BarView.h  BarWindow.cpp  ExpandoMenuBar.cpp  ExpandoMenuBar.h  InlineScrollView.cpp  StatusView.cpp  TeamMenuItem.cpp  TeamMenuItem.h  TimeView.cpp
src/apps/devices/: DevicePCI.cpp  DeviceUSB.cpp  DevicesView.cpp  DevicesView.h  Jamfile  dm_wrapper.c  dm_wrapper.h
src/apps/haiku3d/: Jamfile
src/apps/icon-o-matic/transformable/: TransformBoxStates.h
src/apps/installer/: BlockingQueue.h  Concurrency.h  CopyEngine.cpp  CopyEngine.h  InstallEngine.cpp  InstallEngine.h  InstallerApp.cpp  InstallerApp.h  InstallerDefs.h  InstallerWindow.cpp  InstallerWindow.h  Jamfile  PackageViews.cpp  ProgressReporter.cpp  ProgressReporter.h  UnzipEngine.cpp  WorkerThread.cpp  WorkerThread.h
src/apps/kosmmutextest/: Jamfile  KosmMutexTest.cpp  KosmMutexTest.rdef
src/apps/kosmraytest/: Jamfile  KosmRayTest.cpp  KosmRayTest.rdef
src/apps/kosmsurfacetest/: Jamfile  KosmSurfaceTest.cpp  KosmSurfaceTest.rdef
src/apps/kosmtestsuite/: Jamfile  KosmDotTests.cpp  KosmMutexTests.cpp  KosmRayTests.cpp  KosmSchedulerTests.cpp  KosmSurfaceTests.cpp  KosmTestSuite.rdef  TestCommon.cpp  TestCommon.h
src/apps/mediaplayer/support/: StackBlurFilter.cpp
src/apps/powerstatus/: Jamfile  PowerStatus.cpp  PowerStatusView.cpp
src/apps/stylededit/: cross_file_x86_64_haiku.txt
src/apps/stylededit/simple_test/: simple_test.cpp
src/apps/thorvgdemo/: Jamfile  ThorVGDemo.cpp  ThorVGDemo.rdef
src/kits/: CMakeLists.txt  Jamfile  jamfile_to_cmake.py  meson.build
src/kits/app/: CMakeLists.txt  Message.cpp  MessageAdapter.cpp  libbe_build_log.txt  meson.build  meson_options.txt  message_build_log.txt
src/kits/app/build_cmake/: CMakeCache.txt
src/kits/bluetooth/: CommandManager.cpp  DeviceClass.cpp  KitSupport.cpp  LocalDevice.cpp
src/kits/debugger/: Jamfile
src/kits/debugger/demangler/: Demangler.cpp
src/kits/device/: Jamfile
src/kits/interface/: CMakeLists.txt  meson.build
src/kits/locale/: CMakeLists.txt  meson.build
src/kits/network/libnetservices2/: Jamfile
src/kits/package/: PackageInfo.cpp  RepositoryConfig.cpp
src/kits/render/: Jamfile  KosmCanvas.cpp  KosmFont.cpp  KosmGradient.cpp  KosmImage.cpp  KosmPath.cpp  RenderBackend.hpp
src/kits/render/thorvg/: ThorVGBackend.cpp  (+1 more)
src/kits/spektr/: Jamfile  KosmAnchorLayout.cpp  KosmAutoLayout.cpp  KosmCassowary.hpp  KosmFlexLayout.cpp  KosmGridLayout.cpp
src/kits/storage/: meson.build
src/kits/support/: Archivable.cpp  CMakeLists.txt  String.cpp  meson.build
src/kits/surface/: AreaBackend.cpp  Jamfile  KosmSurface.cpp  KosmSurfaceAllocator.cpp  KosmSurfacePrivate.hpp  PlanarLayout.cpp  PlanarLayout.hpp  SurfaceBuffer.cpp  SurfaceBuffer.hpp  SurfaceGuards.hpp  SurfaceRegistry.cpp
src/kits/tracker/: Jamfile
src/kits/translation/: TranslatorRoster.cpp
src/libs/: Jamfile  meson.build
src/libs/agg/: meson.build
src/libs/blend2d/: Jamfile  README  meson.build
src/libs/icon/: IconRenderer.h  Jamfile  meson.build
src/libs/kosmcg/: Jamfile  kcgbitmap.cpp  kcgblend.cpp  kcgblur.cpp  kcgcolor.cpp  kcgcontext.cpp  kcgerror.cpp  kcgfont.cpp  kcgimage.cpp  kcgotf.cpp  kcgotf.hpp  kcgpaint.cpp  kcgpath.cpp  kcgpixelconv.cpp  kcgprivate.hpp  kcgrasterize.cpp  kcgtransform.cpp  kcgutils.hpp
src/libs/kosmrandom/: Jamfile  KosmRandom.cpp  KosmRandomPrivate.h
src/libs/kosmvg/: Jamfile  kvgbitmap.cpp  kvgblend.cpp  kvgblur.cpp  kvgcolor.cpp  kvgcontext.cpp  kvgerror.cpp  kvgfont.cpp  kvgimage.cpp  kvgotf.cpp  kvgotf.hpp  kvgpaint.cpp  kvgpath.cpp  kvgpixelconv.cpp  kvgprivate.hpp  kvgrasterize.cpp  kvgtransform.cpp  kvgutils.hpp
src/libs/libfdt+/: libfdt.cpp  libfdt_internal.hpp
src/libs/plutovg/: Jamfile  plutovg-blend.cpp  plutovg-blur.cpp  plutovg-canvas.cpp  plutovg-font.cpp  plutovg-ft-math.hpp  plutovg-ft-raster.hpp  plutovg-ft-stroker.hpp  plutovg-ft-types.hpp  plutovg-matrix.cpp  plutovg-paint.cpp  plutovg-path.cpp  plutovg-private.hpp  plutovg-rasterize.cpp  plutovg-surface.cpp  plutovg-utils.hpp  plutovg.hpp
src/libs/stdc++/: Jamfile
src/libs/thorvg/: Jamfile  config.h
src/libs/zydis/: Jamfile
src/system/glue/: CMakeLists.txt  meson.build
src/system/libroot/: CMakeLists.txt  meson.build
src/tools/gensyscalls/: meson.build
subprojects_backup2/haiku-stdlib/: meson.build  meson_options.txt
(+1318 files in other folders)
