# Haiku OS Meson Build Options
# Root level build configuration options

option('target_arch', 
       type: 'string',
       value: 'x86_64',
       description: 'Target architecture (x86_64, riscv64, arm64, etc.)')

option('run_without_registrar', 
       type: 'boolean', 
       value: false,
       description: 'Allow running applications without the registrar (development only)')

option('run_without_app_server',
       type: 'integer',
       value: 0, 
       description: 'Allow running applications without the app server (0=disabled, non-zero=enabled)')

option('haiku_root',
       type: 'string',
       value: '',
       description: 'Path to Haiku source tree (auto-detected if empty)')

option('icu_path', 
       type: 'string', 
       value: '', 
       description: 'Path to ICU libraries directory (auto-detected if empty)')

# Cross-compilation toolchain options
option('use_jam_cross', 
       type: 'boolean', 
       value: true, 
       description: 'Use cross-tools built by Jam build system (default: true)')

option('jam_cross_tools_dir', 
       type: 'string', 
       value: '', 
       description: 'Path to Jam-built cross-tools directory (auto-detected if empty)')

option('external_cross_tools_dir',
       type: 'string',
       value: '',
       description: 'Path to external cross-tools (used when use_jam_cross=false)')

option('auto_fix_cross_tools',
       type: 'boolean',
       value: true,
       description: 'Automatically fix cross-tools compatibility for Meson (create symlinks)')

# Cross-tools build integration
option('build_cross_tools_with_meson', 
       type: 'boolean', 
       value: false,
       description: 'Build cross-tools using Meson wrapper instead of direct script execution')

option('cross_tools_buildtools_dir',
       type: 'string', 
       value: 'buildtools',
       description: 'Path to buildtools directory for cross-tools compilation')

option('cross_tools_jobs',
       type: 'integer',
       value: 0,
       description: 'Number of parallel jobs for cross-tools build (0 = auto-detect)')

option('cross_tools_output_dir',
       type: 'string',
       value: '',
       description: 'Output directory for cross-tools (empty = auto-detect: "generated" for Jam compatibility, "builddir" for Meson)')

# Optional packages for Haiku image
option('beos_compatibility', 
       type: 'boolean', 
       value: false,
       description: 'Include BeOS compatibility layer (x86 only)')

option('development_env', 
       type: 'combo', 
       choices: ['none', 'min', 'base', 'full'], 
       value: 'none',
       description: 'Development environment level (none/min/base/full)')

option('include_git', 
       type: 'boolean', 
       value: false,
       description: 'Include Git version control system')

option('include_webpositive', 
       type: 'boolean', 
       value: true,
       description: 'Include WebPositive browser')

option('include_welcome', 
       type: 'boolean', 
       value: true,
       description: 'Include Welcome documentation')

option('include_bebook', 
       type: 'boolean', 
       value: false,
       description: 'Include BeBook API documentation')

option('include_sources', 
       type: 'boolean', 
       value: false,
       description: 'Include Haiku source code in image')