# Haiku Applications Build Configuration with Blend2D
# Updated build system after AGG to Blend2D migration

# Core applications
subdir('activitymonitor')
subdir('aboutsystem')
subdir('autoraise')
subdir('backgroundsapplet')
subdir('bootmanager')
subdir('bootscreen')
subdir('cdplayer')
subdir('charactertable')
subdir('charm')
subdir('clock')
subdir('codycam')
subdir('cortex')
subdir('debuganalysis')
subdir('debugger')
subdir('debugger_console')
subdir('desktopapplet')
subdir('diskprobe')
subdir('dressdev')
subdir('drivesetup')

# Icon-O-Matic with Blend2D support
subdir('icon-o-matic')

# Media applications with Blend2D
subdir('mediaplayer')

# Additional applications
subdir('mouse')
subdir('netstat')
subdir('overlay')
subdir('pairs')
subdir('powerstatus')
subdir('printers')
subdir('pulse')
subdir('replicant')
subdir('resourcer')
subdir('screenshot')
subdir('serialconnect')
subdir('showimage')
subdir('slice')
subdir('soundplay')
subdir('soundrecord')
subdir('sudoku')
subdir('terminal')
subdir('textsearch')
subdir('tv')
subdir('webpositive')